; ModuleID = '/home/carl/AnghaBench/disque/deps/jemalloc/src/extr_chunk.c_chunk_deregister.c'
source_filename = "/home/carl/AnghaBench/disque/deps/jemalloc/src/extr_chunk.c_chunk_deregister.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@chunks_rtree = common dso_local global i32 0, align 4
@config_prof = common dso_local global i64 0, align 8
@opt_prof = common dso_local global i64 0, align 8
@chunksize = common dso_local global i64 0, align 8
@curchunks = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @chunk_deregister(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i32* %1, i32** %4, align 8
  %8 = load i8*, i8** %3, align 8
  %9 = ptrtoint i8* %8 to i64
  %10 = call i32 @rtree_set(i32* @chunks_rtree, i64 %9, i32* null)
  store i32 %10, i32* %5, align 4
  %11 = load i32, i32* %5, align 4
  %12 = icmp ne i32 %11, 0
  %13 = xor i1 %12, true
  %14 = zext i1 %13 to i32
  %15 = call i32 @assert(i32 %14)
  %16 = load i64, i64* @config_prof, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %40

18:                                               ; preds = %2
  %19 = load i64, i64* @opt_prof, align 8
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %40

21:                                               ; preds = %18
  %22 = load i32*, i32** %4, align 8
  %23 = call i64 @extent_node_size_get(i32* %22)
  store i64 %23, i64* %6, align 8
  %24 = load i64, i64* %6, align 8
  %25 = icmp eq i64 %24, 0
  br i1 %25, label %26, label %27

26:                                               ; preds = %21
  br label %31

27:                                               ; preds = %21
  %28 = load i64, i64* %6, align 8
  %29 = load i64, i64* @chunksize, align 8
  %30 = udiv i64 %28, %29
  br label %31

31:                                               ; preds = %27, %26
  %32 = phi i64 [ 1, %26 ], [ %30, %27 ]
  store i64 %32, i64* %7, align 8
  %33 = call i64 @atomic_read_z(i32* @curchunks)
  %34 = load i64, i64* %7, align 8
  %35 = icmp uge i64 %33, %34
  %36 = zext i1 %35 to i32
  %37 = call i32 @assert(i32 %36)
  %38 = load i64, i64* %7, align 8
  %39 = call i32 @atomic_sub_z(i32* @curchunks, i64 %38)
  br label %40

40:                                               ; preds = %31, %18, %2
  ret void
}

declare dso_local i32 @rtree_set(i32*, i64, i32*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @extent_node_size_get(i32*) #1

declare dso_local i64 @atomic_read_z(i32*) #1

declare dso_local i32 @atomic_sub_z(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
